Implementation/src/test/java/com/polimi/fakePTS/PtsRequest_ESTest.java
/*
 * This file was automatically generated by EvoSuite
 * Fri Jan 05 21:28:31 GMT 2018
 */

package com.polimi.fakePTS;

import org.junit.Test;
import static org.junit.Assert.*;
import static org.evosuite.runtime.EvoAssertions.*;
import com.polimi.fakePTS.PtsRequest;
import com.polimi.fakePTS.tickets.Ticket;
import com.polimi.fakePTS.tickets.TicketType;
import com.polimi.fakePTS.tickets.TrainTicket;
import com.polimi.fakePTS.tickets.UrbanTicket;
import java.time.LocalDate;
import java.time.Period;
import java.time.ZoneId;
import java.time.ZoneOffset;
import java.time.chrono.IsoChronology;
import java.util.List;
import org.evosuite.runtime.EvoRunner;
import org.evosuite.runtime.EvoRunnerParameters;
import org.evosuite.runtime.mock.java.time.MockLocalDate;
import org.evosuite.runtime.mock.java.time.chrono.MockIsoChronology;
import org.junit.runner.RunWith;

@RunWith(EvoRunner.class) @EvoRunnerParameters(mockJVMNonDeterminism = true, useVFS = true, useVNET = true, resetStaticState = true, separateClassLoader = true, useJEE = true) 
public class PtsRequest_ESTest extends PtsRequest_ESTest_scaffolding {

  @Test(timeout = 4000)
  public void test00()  throws Throwable  {
      TicketType ticketType0 = TicketType.SINGLE;
      Period period0 = Period.ofMonths((-1506));
      IsoChronology isoChronology0 = period0.getChronology();
      ZoneId zoneId0 = ZoneId.systemDefault();
      LocalDate localDate0 = MockIsoChronology.dateNow(isoChronology0, zoneId0);
      try { 
        PtsRequest.buyTrainTicket((-1506), "", "", ticketType0, localDate0);
        fail("Expecting exception: IllegalArgumentException");
      
      } catch(IllegalArgumentException e) {
         //
         // error
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test01()  throws Throwable  {
      // Undeclared exception!
      try { 
        PtsRequest.getUrbanPrice((TicketType) null);
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test02()  throws Throwable  {
      // Undeclared exception!
      try { 
        PtsRequest.buyUrbanTicket(72, (TicketType) null, "");
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("com.polimi.fakePTS.tickets.Ticket", e);
      }
  }

  @Test(timeout = 4000)
  public void test03()  throws Throwable  {
      TicketType ticketType0 = TicketType.ONEMONTHPASS;
      // Undeclared exception!
      try { 
        PtsRequest.buyTrainTicket(34, "Mx{!n}V[x", "", ticketType0, (LocalDate) null);
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test04()  throws Throwable  {
      // Undeclared exception!
      try { 
        PtsRequest.activateTicket((Ticket) null);
        fail("Expecting exception: NullPointerException");
      
      } catch(NullPointerException e) {
         //
         // no message in exception (getMessage() returned null)
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test05()  throws Throwable  {
      TicketType ticketType0 = TicketType.ONEMONTHPASS;
      int int0 = PtsRequest.getUrbanPrice(ticketType0);
      assertEquals(35, int0);
  }

  @Test(timeout = 4000)
  public void test06()  throws Throwable  {
      TicketType ticketType0 = TicketType.SINGLE;
      int int0 = PtsRequest.getUrbanPrice(ticketType0);
      assertEquals(2, int0);
  }

  @Test(timeout = 4000)
  public void test07()  throws Throwable  {
      TicketType ticketType0 = TicketType.WEEKPASS;
      int int0 = PtsRequest.getUrbanPrice(ticketType0);
      assertEquals(20, int0);
  }

  @Test(timeout = 4000)
  public void test08()  throws Throwable  {
      TicketType ticketType0 = TicketType.YEARPASS;
      int int0 = PtsRequest.getUrbanPrice(ticketType0);
      assertEquals(250, int0);
  }

  @Test(timeout = 4000)
  public void test09()  throws Throwable  {
      TicketType ticketType0 = TicketType.SINGLE;
      Period period0 = Period.ZERO;
      IsoChronology isoChronology0 = period0.getChronology();
      ZoneOffset zoneOffset0 = ZoneOffset.ofHours(0);
      LocalDate localDate0 = MockIsoChronology.dateNow(isoChronology0, (ZoneId) zoneOffset0);
      try { 
        PtsRequest.buyTrainTicket(0, (String) null, "", ticketType0, localDate0);
        fail("Expecting exception: IllegalArgumentException");
      
      } catch(IllegalArgumentException e) {
         //
         // error
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test10()  throws Throwable  {
      TicketType ticketType0 = TicketType.WEEKPASS;
      UrbanTicket urbanTicket0 = PtsRequest.buyUrbanTicket(93, ticketType0, "");
      assertEquals(93, urbanTicket0.getPrice());
  }

  @Test(timeout = 4000)
  public void test11()  throws Throwable  {
      TicketType ticketType0 = TicketType.WEEKPASS;
      try { 
        PtsRequest.buyUrbanTicket(0, ticketType0, "");
        fail("Expecting exception: IllegalArgumentException");
      
      } catch(IllegalArgumentException e) {
         //
         // error
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test12()  throws Throwable  {
      TicketType ticketType0 = TicketType.YEARPASS;
      LocalDate localDate0 = MockLocalDate.ofYearDay(250, 250);
      TrainTicket trainTicket0 = PtsRequest.buyTrainTicket(250, "E4|sbo}?:rG", "E4|sbo}?:rG", ticketType0, localDate0);
      try { 
        PtsRequest.activateTicket(trainTicket0);
        fail("Expecting exception: Exception");
      
      } catch(Exception e) {
         //
         // Could not activate ticket: today does not correspond with the prefixed day 
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test13()  throws Throwable  {
      TicketType ticketType0 = TicketType.ONEMONTHPASS;
      Ticket ticket0 = new Ticket(1732, ticketType0);
      PtsRequest.activateTicket(ticket0);
      try { 
        PtsRequest.activateTicket(ticket0);
        fail("Expecting exception: Exception");
      
      } catch(Exception e) {
         //
         // Error: Ticket is already validated
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test14()  throws Throwable  {
      TicketType ticketType0 = TicketType.WEEKPASS;
      LocalDate localDate0 = MockLocalDate.now();
      TrainTicket trainTicket0 = PtsRequest.buyTrainTicket(401, "", "", ticketType0, localDate0);
      PtsRequest.activateTicket(trainTicket0);
      assertTrue(trainTicket0.isActivated());
      assertEquals(401, trainTicket0.getPrice());
  }

  @Test(timeout = 4000)
  public void test15()  throws Throwable  {
      PtsRequest.getAvailableCities();
      String string0 = "";
      PtsRequest.getTrainPrice("", "");
      PtsRequest.getTrainPrice("", "");
      TicketType ticketType0 = TicketType.WEEKPASS;
      PtsRequest.buyUrbanTicket(1, ticketType0, "");
      PtsRequest.getTrainPrice("", "");
      PtsRequest.getUrbanPrice(ticketType0);
      PtsRequest.getTrainPrice("", "");
      try { 
        PtsRequest.buyUrbanTicket((-955), ticketType0, "");
        fail("Expecting exception: IllegalArgumentException");
      
      } catch(IllegalArgumentException e) {
         //
         // error
         //
         verifyException("com.polimi.fakePTS.PtsRequest", e);
      }
  }

  @Test(timeout = 4000)
  public void test16()  throws Throwable  {
      PtsRequest ptsRequest0 = new PtsRequest();
  }

  @Test(timeout = 4000)
  public void test17()  throws Throwable  {
      List<String> list0 = PtsRequest.getAvailableTrainStations();
      assertFalse(list0.isEmpty());
  }
}
